# hiplaces

./: .env.example  Cargo.toml  api_description.md
migrations/2020-06-07-092856_users/: up.sql
migrations/2020-08-01-100022_places/: up.sql
src/: auth.rs  main.rs  result.rs  schema.rs
src/app/: mod.rs  places.rs  users.rs
src/db/: mod.rs  place.rs  user.rs
src/middleware/: auth.rs
src/models/: mod.rs  place.rs  user.rs
src/util/: hasher.rs  jwt.rs  mod.rs
