[package]
name = "hiplaces"
version = "0.1.0"
authors = ["Mikhail Pogretskiy <mikhail.pogretskiy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "*"
actix-identity = "*"
actix-multipart = "0.2.0"
actix-rt = "1.1.1"
actix-web = { version = "2.0.0", features = ["rustls"] }
chrono = "0.4.11"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
jsonwebtoken = "7.1.2"
lazy_static = "1.4.0"
libreauth = "*"
log = "0.4.8"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.53"
thiserror = "1.0.19"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
validator = "0.10.0"
validator_derive = "0.10.0"
